[gd_scene load_steps=22 format=2]

[ext_resource path="res://Components/Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Components/Dirt/CookieDirt.tscn" type="PackedScene" id=2]
[ext_resource path="res://Sprites/tilemap-wall.png" type="Texture" id=3]
[ext_resource path="res://Components/Interface/Interface.tscn" type="PackedScene" id=4]
[ext_resource path="res://Maps/Playspace.gd" type="Script" id=5]
[ext_resource path="res://Sprites/tilemap-water.png" type="Texture" id=6]
[ext_resource path="res://Sprites/blank-white.png" type="Texture" id=7]
[ext_resource path="res://Components/Player/Grapple.tscn" type="PackedScene" id=8]
[ext_resource path="res://Maps/Camera.gd" type="Script" id=9]
[ext_resource path="res://Sprites/parallax-2.png" type="Texture" id=10]
[ext_resource path="res://Sprites/parallax-1.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Theme/theme-button-ld48-pressed.tres" type="StyleBox" id=12]

[sub_resource type="Animation" id=1]
resource_name = "damage"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.301961, 0.301961, 0.501961 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "heal"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.964706, 0.666667, 1, 0.392157 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "ShowLevel"
length = 1.6
tracks/0/type = "value"
tracks/0/path = NodePath("Panel:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.5 ),
"transitions": PoolRealArray( 0.287175, 1, 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ), Vector2( 0.8, 0.8 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Panel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Panel:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.2, 1.6 ),
"transitions": PoolRealArray( 1, 0.329877, 1 ),
"update": 0,
"values": [ Vector2( 140, 8 ), Vector2( 140, 8 ), Vector2( 140, -32 ) ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 84, 32 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 80, 2 )

[sub_resource type="Gradient" id=6]
colors = PoolColorArray( 1, 1, 1, 0.392157, 1, 1, 1, 0 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 64, 4.86322 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 16, 15.8055 )

[sub_resource type="Animation" id=9]
tracks/0/type = "bezier"
tracks/0/path = NodePath("Camera:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.92, -2, 0.92, 2, 48, -0.6, -16, 0.6, 16 ),
"times": PoolRealArray( 0, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Walls:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.92, -2, 0.92, 2, 48, -0.6, -16, 0.6, 16 ),
"times": PoolRealArray( 0, 1 )
}
tracks/2/type = "method"
tracks/2/path = NodePath("CookieDirt")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "clear_excess_tiles_on_top"
} ]
}

[node name="Playspace" type="Node"]
script = ExtResource( 5 )

[node name="Camera" type="Node2D" parent="."]
visible = false
script = ExtResource( 9 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Viewpoint" type="Camera2D" parent="Camera"]
anchor_mode = 0
current = true

[node name="Timer" type="Timer" parent="Camera"]
wait_time = 0.2
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorOverlay" type="ColorRect" parent="CanvasLayer"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 80.0
margin_right = 240.0
margin_bottom = 184.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/ColorOverlay"]
anims/damage = SubResource( 1 )
anims/heal = SubResource( 2 )

[node name="Interface" parent="CanvasLayer" instance=ExtResource( 4 )]
rect_pivot_offset = Vector2( 160, 22 )

[node name="Panel" type="Panel" parent="CanvasLayer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_top = -32.0
margin_right = 20.0
margin_bottom = -3.99999
rect_pivot_offset = Vector2( 20, 14 )
custom_styles/panel = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
custom_constants/separation = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/Panel/VBoxContainer"]
margin_right = 32.0
margin_bottom = 6.0
text = "level"
align = 1
valign = 1

[node name="LevelNum" type="Label" parent="CanvasLayer/Panel/VBoxContainer"]
margin_top = 11.0
margin_right = 32.0
margin_bottom = 26.0
text = "5
"
align = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer"]
anims/ShowLevel = SubResource( 3 )

[node name="Line2D" type="Line2D" parent="."]
visible = false
position = Vector2( 0, 152 )
points = PoolVector2Array( 72, -88, 248, -88 )
default_color = Color( 1, 0.4, 0.4, 1 )

[node name="Walls" type="StaticBody2D" parent="."]
collision_layer = 8
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CanGrappleArea" type="Area2D" parent="Walls"]
visible = false
position = Vector2( 0, 152 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/CanGrappleArea"]
position = Vector2( 156, -120 )
shape = SubResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="CanSpontaneouslyExplodeArea" type="Area2D" parent="Walls"]
position = Vector2( 0, -2.23504 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/CanSpontaneouslyExplodeArea"]
position = Vector2( 160, 4.23504 )
shape = SubResource( 5 )

[node name="Fizz" type="CPUParticles2D" parent="Walls"]
position = Vector2( 160, 177.765 )
z_index = 1
z_as_relative = false
amount = 10
lifetime = 2.0
randomness = 1.0
lifetime_randomness = 1.0
emission_shape = 2
emission_rect_extents = Vector2( 80, 1 )
direction = Vector2( 0, -1 )
spread = 0.0
gravity = Vector2( 0, 0 )
initial_velocity = 100.0
scale_amount = 3.0
scale_amount_random = 0.5
color_ramp = SubResource( 6 )

[node name="Water" type="Sprite" parent="Walls"]
position = Vector2( 160, 72 )
scale = Vector2( 20, 1 )
z_index = 10
z_as_relative = false
texture = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="Liquid" type="Sprite" parent="Walls"]
self_modulate = Color( 1, 1, 1, 0.235294 )
position = Vector2( 80, 64 )
scale = Vector2( 20, 15 )
texture = ExtResource( 7 )
offset = Vector2( 4, 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionCeiling" type="CollisionShape2D" parent="Walls"]
visible = false
position = Vector2( 160, -32 )
scale = Vector2( 2.5, 6.58 )
shape = SubResource( 7 )

[node name="CollisionGround" type="CollisionShape2D" parent="Walls"]
visible = false
position = Vector2( 160, 216 )
scale = Vector2( 2.5, 6.58 )
shape = SubResource( 7 )

[node name="WallLeft" type="Sprite" parent="Walls"]
position = Vector2( 40, 96 )
z_index = 1000
z_as_relative = false
texture = ExtResource( 3 )
offset = Vector2( 0, -4 )

[node name="CollisionLeft" type="CollisionShape2D" parent="Walls"]
visible = false
position = Vector2( 40, 104 )
scale = Vector2( 2.5, 6.58 )
shape = SubResource( 8 )

[node name="WallRight" type="Sprite" parent="Walls"]
position = Vector2( 280, 96 )
z_index = 1000
z_as_relative = false
texture = ExtResource( 3 )
offset = Vector2( 0, -4 )
flip_h = true

[node name="CollisionRight" type="CollisionShape2D" parent="Walls"]
visible = false
position = Vector2( 280, 104 )
scale = Vector2( 2.5, 6.58 )
shape = SubResource( 8 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 160, 8 )

[node name="Grapple" parent="." instance=ExtResource( 8 )]
visible = false
position = Vector2( 208, -32 )

[node name="CookieDirt" parent="." instance=ExtResource( 2 )]
position = Vector2( 80, 64 )

[node name="CookieTiles" parent="CookieDirt" index="0"]
tile_data = PoolIntArray( -393216, 0, 8, -393215, 0, 9, -393214, 0, 9, -393213, 0, 9, -393212, 0, 9, -393211, 0, 9, -393210, 0, 9, -393209, 0, 9, -393208, 0, 9, -393207, 0, 9, -393206, 0, 9, -393205, 0, 9, -393204, 0, 9, -393203, 0, 9, -393202, 0, 9, -393201, 0, 9, -393200, 0, 9, -393199, 0, 9, -393198, 0, 9, -393197, 0, 11, -327680, 0, 196616, -327679, 0, 196618, -327678, 0, 196618, -327677, 0, 196618, -327676, 0, 196618, -327675, 0, 196618, -327674, 0, 196618, -327673, 0, 196618, -327672, 0, 196618, -327671, 0, 196618, -327670, 0, 196618, -327669, 0, 196618, -327668, 0, 196618, -327667, 0, 196618, -327666, 0, 196618, -327665, 0, 196618, -327664, 0, 196618, -327663, 0, 196618, -327662, 0, 196618, -327661, 0, 196619, 524288, 0, 8, 524289, 0, 9, 524290, 0, 9, 524291, 0, 9, 524292, 0, 9, 524293, 0, 9, 524294, 0, 9, 524295, 0, 9, 524296, 0, 9, 524297, 0, 9, 524298, 0, 9, 524299, 0, 9, 524300, 0, 9, 524301, 0, 9, 524302, 0, 9, 524303, 0, 9, 524304, 0, 9, 524305, 0, 9, 524306, 0, 9, 524307, 0, 11, 589824, 0, 65544, 589825, 0, 65546, 589826, 0, 196620, 589827, 0, 65546, 589828, 0, 65546, 589829, 0, 65548, 589830, 0, 12, 589831, 0, 65546, 589832, 0, 65546, 589833, 0, 65546, 589834, 0, 131084, 589835, 0, 65546, 589836, 0, 65546, 589837, 0, 65546, 589838, 0, 65546, 589839, 0, 65546, 589840, 0, 131084, 589841, 0, 65546, 589842, 0, 65546, 589843, 0, 131083, 655360, 0, 65544, 655361, 0, 131084, 655362, 0, 131084, 655363, 0, 65546, 655364, 0, 65546, 655365, 0, 65546, 655366, 0, 65546, 655367, 0, 65546, 655368, 0, 12, 655369, 0, 12, 655370, 0, 65546, 655371, 0, 12, 655372, 0, 65548, 655373, 0, 65546, 655374, 0, 65546, 655375, 0, 65546, 655376, 0, 65546, 655377, 0, 12, 655378, 0, 65546, 655379, 0, 131083, 720896, 0, 65544, 720897, 0, 65548, 720898, 0, 65546, 720899, 0, 65546, 720900, 0, 65548, 720901, 0, 65546, 720902, 0, 65546, 720903, 0, 131084, 720904, 0, 65548, 720905, 0, 65546, 720906, 0, 65546, 720907, 0, 65546, 720908, 0, 65546, 720909, 0, 65546, 720910, 0, 131084, 720911, 0, 65546, 720912, 0, 65546, 720913, 0, 65546, 720914, 0, 65546, 720915, 0, 131083, 786432, 0, 65544, 786433, 0, 65546, 786434, 0, 196620, 786435, 0, 65546, 786436, 0, 65546, 786437, 0, 65546, 786438, 0, 65546, 786439, 0, 65546, 786440, 0, 196620, 786441, 0, 65546, 786442, 0, 12, 786443, 0, 65546, 786444, 0, 65546, 786445, 0, 65546, 786446, 0, 65546, 786447, 0, 131084, 786448, 0, 65546, 786449, 0, 65546, 786450, 0, 65546, 786451, 0, 131083, 851968, 0, 65544, 851969, 0, 65546, 851970, 0, 65546, 851971, 0, 65546, 851972, 0, 65546, 851973, 0, 65546, 851974, 0, 65548, 851975, 0, 131084, 851976, 0, 65546, 851977, 0, 196620, 851978, 0, 65546, 851979, 0, 65546, 851980, 0, 12, 851981, 0, 65546, 851982, 0, 65546, 851983, 0, 65546, 851984, 0, 131084, 851985, 0, 65546, 851986, 0, 12, 851987, 0, 131083, 917504, 0, 196616, 917505, 0, 196618, 917506, 0, 196618, 917507, 0, 196618, 917508, 0, 196618, 917509, 0, 196618, 917510, 0, 196618, 917511, 0, 196618, 917512, 0, 196618, 917513, 0, 196618, 917514, 0, 196618, 917515, 0, 196618, 917516, 0, 196618, 917517, 0, 196618, 917518, 0, 196618, 917519, 0, 196618, 917520, 0, 196618, 917521, 0, 196618, 917522, 0, 196618, 917523, 0, 196619 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/MoveCameraDown = SubResource( 9 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2( 160, 0 )
motion_scale = Vector2( 1, 0.5 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( -80, 0 )
texture = ExtResource( 11 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 160, 10000 )

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2( 80, 0 )
motion_scale = Vector2( 1, 0.25 )

[node name="Sprite2" type="Sprite" parent="ParallaxBackground/ParallaxLayer2"]
texture = ExtResource( 10 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 160, 10000 )

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2( 80, 0 )
motion_scale = Vector2( 1, 0.35 )

[node name="Sprite2" type="Sprite" parent="ParallaxBackground/ParallaxLayer3"]
modulate = Color( 1, 1, 1, 0.52549 )
position = Vector2( 200, 344 )
scale = Vector2( -1.5, -1.5 )
texture = ExtResource( 11 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 160, 10000 )

[connection signal="best_changed" from="." to="CanvasLayer/Interface" method="_on_Playspace_best_changed"]
[connection signal="depth_changed" from="." to="CanvasLayer/Interface" method="_on_Playspace_depth_changed"]
[connection signal="game_over" from="." to="CanvasLayer/Interface" method="_on_Playspace_game_over"]
[connection signal="game_over" from="." to="Player" method="_on_Playspace_game_over"]
[connection signal="grapple_called" from="." to="Grapple" method="_on_Playspace_grapple_called"]
[connection signal="life_changed" from="." to="CanvasLayer/Interface" method="_on_Playspace_life_changed"]
[connection signal="next_changed" from="." to="CanvasLayer/Interface" method="_on_Playspace_next_changed"]
[connection signal="power_changed" from="." to="CanvasLayer/Interface" method="_on_Playspace_power_changed"]
[connection signal="score_changed" from="." to="CanvasLayer/Interface" method="_on_Playspace_score_changed"]
[connection signal="timeout" from="Camera/Timer" to="Camera" method="_on_Timer_timeout"]
[connection signal="game_quit" from="CanvasLayer/Interface" to="." method="_on_Interface_game_quit"]
[connection signal="game_restart" from="CanvasLayer/Interface" to="." method="_on_Interface_game_restart"]
[connection signal="grapple_called" from="Player" to="." method="_on_Player_grapple_called"]
[connection signal="life_changed" from="Player" to="." method="_on_Player_life_changed"]
[connection signal="player_damaged" from="Player" to="." method="_on_Player_player_damaged"]
[connection signal="power_changed" from="Player" to="." method="_on_Player_power_changed"]
[connection signal="power_reset" from="Player" to="." method="_on_Player_power_reset"]
[connection signal="score_changed" from="Player" to="." method="_on_Player_score_changed"]
[connection signal="collided" from="Grapple" to="." method="_on_Grapple_collided"]
[connection signal="obtained" from="Grapple" to="." method="_on_Grapple_obtained"]
[connection signal="level_changed" from="CookieDirt" to="." method="_on_CookieDirt_level_changed"]
[connection signal="next_count" from="CookieDirt" to="." method="_on_CookieDirt_next_count"]
[connection signal="next_dirt" from="CookieDirt" to="." method="_on_CookieDirt_next_dirt"]

[editable path="CookieDirt"]
